added help section to main page
git-svn-id: svn://svn.code.sf.net/p/ixo-jtag/code@196 16d96410-3d24-0410-b1d3-9a6b7672f313

--- a/sfweb/index.html
+++ b/sfweb/index.html
@@ -17,6 +17,11 @@
 <p>Sources and more documentation for both can be found below and in the SVN repository, see the
 <a href="http://sourceforge.net/projects/ixo-jtag">SourceForge project page</a> for the latter.</p>
 
+<p><b>Getting Help:</b> <b>Please read the documentation first,</b> there is lots of it! If you
+still have questions, please go to to the <a href="https://sourceforge.net/projects/ixo-jtag/support">support section</a>
+of the project page, take a look if someone has already asked your question, and if not, use
+the support section to ask for help.</p>
+
 <h2><a name="usb_jtag"></a>usb_jtag - USB JTAG Adapter Firmware</h2>
 
 <p>
