--- a/sfweb/nexys2-linux-howto.html
+++ b/sfweb/nexys2-linux-howto.html
@@ -246,7 +246,8 @@ See the <a href="http://sourceforge.net/projects/ixo-jtag">SourceForge project p
 	<td>4</td>
 	<td nowrap="nowrap"><code>make</code></td>
 	<td><small>This will build the firmware as <b><code>std.hex</code></b>.<br/>
-		If you want to use <code>nexys2prog</code>, replace the <code>usb_jtag.hex</code> file with the one you just built.</small></td>
+		If you want to use <code>nexys2prog</code>, replace the <code>usb_jtag.hex</code> file with the one you just built.<br/>
+		To clean up the build directory to its original state, run "<code>make clean</code>" (note that this deletes the <code>.hex</code> file as well).</small></td>
 </tr>
 </table>
 
