minor website update
git-svn-id: svn://svn.code.sf.net/p/ixo-jtag/code@203 16d96410-3d24-0410-b1d3-9a6b7672f313

--- a/sfweb/index.html
+++ b/sfweb/index.html
@@ -59,6 +59,15 @@ It is well documented, see the links below.
 	<li><a href="http://ixo-jtag.svn.sourceforge.net/viewvc/ixo-jtag/nexys2prog/trunk/">Browse the Sources</a></li>
 </ul>
 
+<p>&nbsp;</p>
+
+<p><small><i>A brief note on terminology:</i> The term "FX2" can unfortunately refer to several things:
+	The <a href="http://www.cypress.com/?id=193">Cypress FX2 EZ-USB family</a>,
+	the KNJN (originally FPGA4FUN) <a href="http://www.knjn.com/FPGA-FX2.html">Xylo, Saxo and other boards</a>,
+	or the Hirose FX2 connectors on the <a href="http://www.digilentinc.com/nexys2/">Digilent Nexys2</a> board,
+	although I don't think the latter is talked about in the documentation.
+	Here, we usually use FX2 to refer to the Cypress EZ-USB chips.</small></p>
+
 <hr />
 <small><i>Last page update: $Date$</i></small><br/>
 <p><a href="http://sourceforge.net/projects/ixo-jtag"><img border="0"
